tests/invalid/runtime/io_after_close.pts
import Io;
import Fs;

function main() : void {
    string path = Io.tempPath();
    TextFile f = Io.openText(path, "w");
    f.write("x");
    f.close();
    try {
        f.read(1);
    } finally {
        if (Fs.exists(path)) Fs.rm(path);
    }
}
